--- a/convolution.html
+++ b/convolution.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgf59b75a" class="outline-2">
-<h2 id="orgf59b75a">Convolution</h2>
-<div class="outline-text-2" id="text-orgf59b75a">
+<div id="outline-container-org19ad99b" class="outline-2">
+<h2 id="org19ad99b">Convolution</h2>
+<div class="outline-text-2" id="text-org19ad99b">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -46,9 +46,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org92f4509" class="outline-3">
-<h3 id="org92f4509">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org92f4509">
+<div id="outline-container-org6015d9f" class="outline-3">
+<h3 id="org6015d9f">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org6015d9f">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -150,9 +150,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-org212042c" class="outline-3">
-<h3 id="org212042c">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-org212042c">
+<div id="outline-container-orgcef2ef3" class="outline-3">
+<h3 id="orgcef2ef3">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-orgcef2ef3">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -176,9 +176,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-orgc26da1d" class="outline-3">
-<h3 id="orgc26da1d">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-orgc26da1d">
+<div id="outline-container-orgd9f3845" class="outline-3">
+<h3 id="orgd9f3845">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-orgd9f3845">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -319,9 +319,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-org752f8f8" class="outline-3">
-<h3 id="org752f8f8">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-org752f8f8">
+<div id="outline-container-org0a65f17" class="outline-3">
+<h3 id="org0a65f17">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org0a65f17">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -339,7 +339,7 @@ and the other as the input.
 </div>
 </div>
 
-<div id="outline-container-orgd62d705" class="outline-3">
+<div id="outline-container-org1550fa3" class="outline-3">
 <h3 id="impulse-responses">Impulse Responses</h3>
 <div class="outline-text-3" id="text-impulse-responses">
 <p>
