--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org707e6a9" class="outline-2">
-<h2 id="org707e6a9">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org707e6a9">
+<div id="outline-container-org1694b52" class="outline-2">
+<h2 id="org1694b52">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org1694b52">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org0d78d99" class="outline-3">
-<h3 id="org0d78d99">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org0d78d99">
+<div id="outline-container-orgface319" class="outline-3">
+<h3 id="orgface319">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-orgface319">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-orge27509b" class="outline-4">
-<h4 id="orge27509b">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-orge27509b">
+<div id="outline-container-org8f04e95" class="outline-4">
+<h4 id="org8f04e95">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org8f04e95">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-orgd9c6669" class="outline-4">
-<h4 id="orgd9c6669">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-orgd9c6669">
+<div id="outline-container-org6a949bf" class="outline-4">
+<h4 id="org6a949bf">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org6a949bf">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-orgfa0a98e" class="outline-3">
-<h3 id="orgfa0a98e">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-orgfa0a98e">
+<div id="outline-container-org90d1980" class="outline-3">
+<h3 id="org90d1980">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org90d1980">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-org05e70fb" class="outline-3">
-<h3 id="org05e70fb">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-org05e70fb">
+<div id="outline-container-orgf970312" class="outline-3">
+<h3 id="orgf970312">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orgf970312">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org082b47b" class="outline-3">
-<h3 id="org082b47b">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org082b47b">
+<div id="outline-container-org88edea5" class="outline-3">
+<h3 id="org88edea5">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org88edea5">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org7f034a7" class="outline-3">
-<h3 id="org7f034a7">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org7f034a7">
+<div id="outline-container-org28e7ebc" class="outline-3">
+<h3 id="org28e7ebc">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org28e7ebc">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orgd5ae648" class="outline-4">
-<h4 id="orgd5ae648">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orgd5ae648">
+<div id="outline-container-orgf3a6e34" class="outline-4">
+<h4 id="orgf3a6e34">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-orgf3a6e34">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org9ade00d" class="outline-3">
-<h3 id="org9ade00d">Aliasing</h3>
-<div class="outline-text-3" id="text-org9ade00d">
+<div id="outline-container-org879c71c" class="outline-3">
+<h3 id="org879c71c">Aliasing</h3>
+<div class="outline-text-3" id="text-org879c71c">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-orgb34c145" class="outline-3">
-<h3 id="orgb34c145">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-orgb34c145">
+<div id="outline-container-org274aef5" class="outline-3">
+<h3 id="org274aef5">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org274aef5">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
