--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ hi i'm luke - this is my blog
 <li><a href="networking-in-lisp.html">tcp sockets in common lisp</a></li>
 <li><a href="https://larzeitlin.github.io/simple-flashcards">simple flashcards</a></li>
 <li><a href="scittle-hilbert-curve.html">scittle hilbert curve</a></li>
-<li><a href="i-ching.html">I Ching</a></li>
+<li><a href="i-ching.html">i ching</a></li>
 </ul>
 </div>
 </body>
