--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-org362678a" class="outline-2">
-<h2 id="org362678a">404 - page not found</h2>
-<div class="outline-text-2" id="text-org362678a">
+<div id="outline-container-orgd28cb96" class="outline-2">
+<h2 id="orgd28cb96">404 - page not found</h2>
+<div class="outline-text-2" id="text-orgd28cb96">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
