--- a/dft.html
+++ b/dft.html
@@ -39,9 +39,9 @@
 </p>
 
 
-<div id="outline-container-org4577e95" class="outline-2">
-<h2 id="org4577e95">Discrete Fourier Transform</h2>
-<div class="outline-text-2" id="text-org4577e95">
+<div id="outline-container-org32e2384" class="outline-2">
+<h2 id="org32e2384">Discrete Fourier Transform</h2>
+<div class="outline-text-2" id="text-org32e2384">
 <p>
 This is just my understanding / intuitive explanation of what this algorithm means.
 </p>
@@ -74,9 +74,9 @@ and phase?"</i></li>
 </ul>
 </div>
 
-<div id="outline-container-org3a530c2" class="outline-3">
-<h3 id="org3a530c2">A Roundabout Introduction</h3>
-<div class="outline-text-3" id="text-org3a530c2">
+<div id="outline-container-org71bd1ff" class="outline-3">
+<h3 id="org71bd1ff">A Roundabout Introduction</h3>
+<div class="outline-text-3" id="text-org71bd1ff">
 <p>
 <a href="https://en.wikipedia.org/wiki/Joseph_Fourier">Joseph Fourier</a>
 was a French mathematician who was doing his thing at the end of the 18th to
@@ -90,9 +90,9 @@ sinusoids.
 </p>
 </div>
 
-<div id="outline-container-org3cb8c1b" class="outline-4">
-<h4 id="org3cb8c1b">Sinusoids, circles and epicycles</h4>
-<div class="outline-text-4" id="text-org3cb8c1b">
+<div id="outline-container-org4d33dde" class="outline-4">
+<h4 id="org4d33dde">Sinusoids, circles and epicycles</h4>
+<div class="outline-text-4" id="text-org4d33dde">
 <p>
 Let's start by thinking of a sinusoid as an aspect of circular movement
 in relation to time. As we probably all learned in school at some stage,
@@ -183,9 +183,9 @@ here, and the end result is intuitive.
 </div>
 </div>
 
-<div id="outline-container-org84bbe47" class="outline-4">
-<h4 id="org84bbe47">Amplitude and Phase</h4>
-<div class="outline-text-4" id="text-org84bbe47">
+<div id="outline-container-orgc862c40" class="outline-4">
+<h4 id="orgc862c40">Amplitude and Phase</h4>
+<div class="outline-text-4" id="text-orgc862c40">
 <p>
 What we do need is a method to find out <b>which sinusoids</b> are in a given
 signal. Just the frequency of those sinusoids isn't enough information.
@@ -241,9 +241,9 @@ of the article
 </div>
 </div>
 
-<div id="outline-container-orgbf8dafa" class="outline-3">
-<h3 id="orgbf8dafa">Imaginary and Complex Numbers</h3>
-<div class="outline-text-3" id="text-orgbf8dafa">
+<div id="outline-container-orgcf1b19e" class="outline-3">
+<h3 id="orgcf1b19e">Imaginary and Complex Numbers</h3>
+<div class="outline-text-3" id="text-orgcf1b19e">
 <p>
 \[i = \sqrt{−1}\]
 </p>
@@ -321,9 +321,9 @@ boot up some other concepts we'll need.
 </div>
 </div>
 
-<div id="outline-container-org6e58a1c" class="outline-3">
-<h3 id="org6e58a1c">Euler's Number</h3>
-<div class="outline-text-3" id="text-org6e58a1c">
+<div id="outline-container-org1c62211" class="outline-3">
+<h3 id="org1c62211">Euler's Number</h3>
+<div class="outline-text-3" id="text-org1c62211">
 <p>
 Usually known as simply e, Euler's number is a mathematical constant.
 It's a real,
@@ -334,9 +334,9 @@ how we get to e through an analogy to compound interest.
 </p>
 </div>
 
-<div id="outline-container-orgacf45f9" class="outline-4">
-<h4 id="orgacf45f9">Growth</h4>
-<div class="outline-text-4" id="text-orgacf45f9">
+<div id="outline-container-org13a265c" class="outline-4">
+<h4 id="org13a265c">Growth</h4>
+<div class="outline-text-4" id="text-org13a265c">
 <p>
 This section seems pretty unrelated at first, but it's actually key to
 understanding the DFT. I should add that this bank loan analogy is just
@@ -453,7 +453,7 @@ help us make a tool for seeking out sinusoids in a signal.
 </div>
 </div>
 
-<div id="outline-container-org582cfc9" class="outline-4">
+<div id="outline-container-orgae54124" class="outline-4">
 <h4 id="imaginary-growth-is-anticlockwise-rotation">Imaginary Growth is Anticlockwise Rotation</h4>
 <div class="outline-text-4" id="text-imaginary-growth-is-anticlockwise-rotation">
 <p>
@@ -508,9 +508,9 @@ The upshot is we can use e to make circles. This is the basis of the
 </div>
 </div>
 
-<div id="outline-container-org62b7775" class="outline-3">
-<h3 id="org62b7775">Complex sinusoid</h3>
-<div class="outline-text-3" id="text-org62b7775">
+<div id="outline-container-org9e991a5" class="outline-3">
+<h3 id="org9e991a5">Complex sinusoid</h3>
+<div class="outline-text-3" id="text-org9e991a5">
 <p>
 The complex sinusoid is really just the sum of two sinusoids, one real
 and one imaginary. These two sinusoids are in <i>phase quadrature</i>, which
@@ -588,9 +588,9 @@ Using a complex sinusoid helps us keep it all compact and tidy.
 </div>
 </div>
 
-<div id="outline-container-org0f8cb36" class="outline-3">
-<h3 id="org0f8cb36">The Discrete Fourier Transform</h3>
-<div class="outline-text-3" id="text-org0f8cb36">
+<div id="outline-container-orgda33662" class="outline-3">
+<h3 id="orgda33662">The Discrete Fourier Transform</h3>
+<div class="outline-text-3" id="text-orgda33662">
 <p>
 We've got all the bits we need! We're going to just dive in:
 </p>
@@ -686,9 +686,9 @@ You may be asking yourself&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org1e46a9f" class="outline-4">
-<h4 id="org1e46a9f">Why are we multiplying our input signal by sinusoids?</h4>
-<div class="outline-text-4" id="text-org1e46a9f">
+<div id="outline-container-orgf72069d" class="outline-4">
+<h4 id="orgf72069d">Why are we multiplying our input signal by sinusoids?</h4>
+<div class="outline-text-4" id="text-orgf72069d">
 <p>
 The complex sinusoid is different for each bin. It's frequency is set by
 k. This complex sinusoid hunts for a sinusoid that matches it in our
@@ -760,9 +760,9 @@ through some examples:
 </div>
 </div>
 
-<div id="outline-container-orgf376e10" class="outline-4">
-<h4 id="orgf376e10">Examples</h4>
-<div class="outline-text-4" id="text-orgf376e10">
+<div id="outline-container-org54f72b8" class="outline-4">
+<h4 id="org54f72b8">Examples</h4>
+<div class="outline-text-4" id="text-org54f72b8">
 <p>
 We'll start with a signal to test. Here's a signal made from two
 sinusoids. We'll use the just the real part of the DFT to find out which
@@ -857,7 +857,7 @@ a static frequency spectrum of that sound.
 </div>
 </div>
 
-<div id="outline-container-orga840591" class="outline-3">
+<div id="outline-container-org07d23bb" class="outline-3">
 <h3 id="some-properties-of-the-dft">Some Properties of the DFT</h3>
 <div class="outline-text-3" id="text-some-properties-of-the-dft">
 <p>
@@ -915,7 +915,7 @@ you'll have to divide it by N.
 </div>
 </div>
 
-<div id="outline-container-orgdab2b20" class="outline-3">
+<div id="outline-container-org1c9aa7e" class="outline-3">
 <h3 id="where-next">Where next?</h3>
 <div class="outline-text-3" id="text-where-next">
 <p>
