--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org1694b52" class="outline-2">
-<h2 id="org1694b52">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org1694b52">
+<div id="outline-container-orge09c114" class="outline-2">
+<h2 id="orge09c114">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-orge09c114">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-orgface319" class="outline-3">
-<h3 id="orgface319">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-orgface319">
+<div id="outline-container-org9520e06" class="outline-3">
+<h3 id="org9520e06">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org9520e06">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org8f04e95" class="outline-4">
-<h4 id="org8f04e95">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org8f04e95">
+<div id="outline-container-orgb0c7760" class="outline-4">
+<h4 id="orgb0c7760">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-orgb0c7760">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org6a949bf" class="outline-4">
-<h4 id="org6a949bf">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org6a949bf">
+<div id="outline-container-org5ae566a" class="outline-4">
+<h4 id="org5ae566a">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org5ae566a">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org90d1980" class="outline-3">
-<h3 id="org90d1980">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org90d1980">
+<div id="outline-container-orgf777c2e" class="outline-3">
+<h3 id="orgf777c2e">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-orgf777c2e">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orgf970312" class="outline-3">
-<h3 id="orgf970312">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orgf970312">
+<div id="outline-container-orgb441d62" class="outline-3">
+<h3 id="orgb441d62">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orgb441d62">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org88edea5" class="outline-3">
-<h3 id="org88edea5">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org88edea5">
+<div id="outline-container-orge55d0eb" class="outline-3">
+<h3 id="orge55d0eb">SSB Modulation</h3>
+<div class="outline-text-3" id="text-orge55d0eb">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org28e7ebc" class="outline-3">
-<h3 id="org28e7ebc">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org28e7ebc">
+<div id="outline-container-org00e0ad7" class="outline-3">
+<h3 id="org00e0ad7">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org00e0ad7">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orgf3a6e34" class="outline-4">
-<h4 id="orgf3a6e34">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orgf3a6e34">
+<div id="outline-container-orgb84f39a" class="outline-4">
+<h4 id="orgb84f39a">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-orgb84f39a">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org879c71c" class="outline-3">
-<h3 id="org879c71c">Aliasing</h3>
-<div class="outline-text-3" id="text-org879c71c">
+<div id="outline-container-org8e53fe3" class="outline-3">
+<h3 id="org8e53fe3">Aliasing</h3>
+<div class="outline-text-3" id="text-org8e53fe3">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org274aef5" class="outline-3">
-<h3 id="org274aef5">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org274aef5">
+<div id="outline-container-org5b1dae6" class="outline-3">
+<h3 id="org5b1dae6">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org5b1dae6">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
